Add custom data type as argument example

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,5 +27,9 @@
             android:name="message"
             app:argType="string"
             android:defaultValue="Hello world" />
+        <argument
+            android:name="user"
+            app:argType="com.ashwin.android.jetpacknavigationsafeargs.User"
+            app:nullable="true" />
     </fragment>
 </navigation>
